<resources>
    <string name="app_name">BukovelApp</string>
    <string name="title_home">@string/app_name</string>
    <string name="title_services">Services</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_login">enter login</string>
    <string name="login">login</string>
    <string name="enter_password">enter password</string>
    <string name="log_in">log in</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up_hyper_link">First time here? Sign up</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="ski_lift">Lifts</string>
    <string name="services">Services</string>
    <string name="enter_password_again">enter password again</string>
    <string name="sign_up">sign up</string>
    <string name="map_id">49795c78d4a113f0</string>
    <string name="navigator_opener">navigator opener</string>
    <string name="middle_level_red">middle level | RED</string>
    <string name="high_level_black">high level | BLACK</string>
    <string name="pin_route">pin route</string>
    <string name="unpin_route">unpin route</string>
    <string name="lifts_current_state">Lifts current load</string>
    <string name="active_lifts">active lifts:</string>
    <string name="slash">/</string>
    <string name="rating_of_lift">rating of lift:</string>
</resources>