<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_baseline_miscellaneous_services_24"
        android:title="@string/services" />

    <item
        android:id="@+id/navigation_lifts"
        android:icon="@drawable/ic_baseline_elevator_24"
        android:title="@string/ski_lift" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/map" />

    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_baseline_login_24"
        android:title="@string/login" />

</menu>