<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/lin_lay_input_sign_fields"
        android:id="@+id/lin_lay_sign_up_input_fields"
        app:layout_constraintBottom_toTopOf="@+id/lin_lay_sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/match_wrap_layout"
            android:layout_marginBottom="15dp"
            app:startIconDrawable="@drawable/ic_baseline_person_outline_24">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/match_wrap_layout"
                android:id="@+id/tiet_sign_up_enter_login"
                android:hint="@string/enter_login"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/match_wrap_layout"
            android:layout_marginBottom="15dp"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/match_wrap_layout"
                android:id="@+id/tiet_sign_up_enter_password"
                android:hint="@string/enter_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/match_wrap_layout"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/match_wrap_layout"
                android:id="@+id/tiet_sign_up_enter_password_again"
                android:hint="@string/enter_password_again"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_lay_sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin_lay_sign_up_input_fields">

        <androidx.appcompat.widget.AppCompatButton
            style="@style/login_sign_in_button"
            android:id="@+id/btn_sign_up"
            android:layout_width="210dp"
            android:text="@string/sign_up"
            android:background="@drawable/rounded_button"
            android:layout_margin="10dp" />

        <TextView
            style="@style/match_wrap_layout"
            android:layout_width="wrap_content"
            android:id="@+id/sign_up_link_tv"
            android:text="@string/sign_up_hyper_link"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>